# django-rag-chatbot

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
accounts/: admin.py  apps.py  tests.py  views.py
chat/: admin.py  urls.py  views.py
chat/migrations/: 0001_initial.py
core/: asgi.py  settings.py  urls.py
src/accounts/: forms.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_create_user_profiles.py
src/chat/: apps.py  chat_client.py  models.py  rag_pipeline.py  tests.py  urls.py  views.py
src/chat/migrations/: 0002_conversation_chatmessage_conversation.py
src/config/: __init__.py  config.py  settings.toml
src/core/: settings.py  urls.py  wsgi.py
src/documents/: admin.py  apps.py  forms.py  models.py  processors.py  tests.py  urls.py  views.py
src/documents/migrations/: 0001_initial.py  0002_remove_document_title.py  0002_remove_documentchunk_embedding.py
src/static/css/: base.css  chat_home.css
src/static/js/: chat_interaction.js
src/templates/: base.html
src/templates/accounts/: account_settings.html  login.html  register.html
src/templates/chat/: chat_home.html
src/templates/documents/: document_list.html
static/css/: chat_home.css
static/js/: chat_interaction.js
templates/: base.html
templates/chat/: chat_home.html
